// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCourseRunPage renders html correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CreateCourseRunPage
    clearCourseInfoErrors={[Function]}
    courseInfo={
      Object {
        "data": Object {},
        "error": null,
        "isCreating": false,
        "isFetching": false,
      }
    }
    courseRunOptions={Object {}}
    createCourseRun={[Function]}
    fetchCourseInfo={[Function]}
    fetchCourseRunOptions={[Function]}
    formValues={Object {}}
    id="00000000-0000-0000-0000-000000000001"
    initialValues={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          Create Course Run
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <div>
            <ReduxForm
              currentFormValues={Object {}}
              getCourseRunOptions={[Function]}
              isCreating={false}
              onSubmit={[Function]}
              parseOptions={[Function]}
              title=""
              uuid=""
            />
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Create Course Run",
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": "Create Course Run",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            <div>
              <ReduxForm
                currentFormValues={Object {}}
                getCourseRunOptions={[Function]}
                isCreating={false}
                onSubmit={[Function]}
                parseOptions={[Function]}
                title=""
                uuid=""
              />
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ReduxForm
                  currentFormValues={Object {}}
                  getCourseRunOptions={[Function]}
                  isCreating={false}
                  onSubmit={[Function]}
                  parseOptions={[Function]}
                  title=""
                  uuid=""
                />,
                false,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "currentFormValues": Object {},
                  "getCourseRunOptions": [Function],
                  "isCreating": false,
                  "onSubmit": [Function],
                  "parseOptions": [Function],
                  "title": "",
                  "uuid": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              false,
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            Create Course Run
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <div>
              <ReduxForm
                currentFormValues={Object {}}
                getCourseRunOptions={[Function]}
                isCreating={false}
                onSubmit={[Function]}
                parseOptions={[Function]}
                title=""
                uuid=""
              />
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Create Course Run",
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": "Create Course Run",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
              <div>
                <ReduxForm
                  currentFormValues={Object {}}
                  getCourseRunOptions={[Function]}
                  isCreating={false}
                  onSubmit={[Function]}
                  parseOptions={[Function]}
                  title=""
                  uuid=""
                />
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <ReduxForm
                    currentFormValues={Object {}}
                    getCourseRunOptions={[Function]}
                    isCreating={false}
                    onSubmit={[Function]}
                    parseOptions={[Function]}
                    title=""
                    uuid=""
                  />,
                  false,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "currentFormValues": Object {},
                    "getCourseRunOptions": [Function],
                    "isCreating": false,
                    "onSubmit": [Function],
                    "parseOptions": [Function],
                    "title": "",
                    "uuid": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                false,
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`CreateCourseRunPage renders html correctly when creating 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CreateCourseRunPage
    clearCourseInfoErrors={[Function]}
    courseInfo={
      Object {
        "data": Object {},
        "error": null,
        "isCreating": true,
        "isFetching": false,
      }
    }
    courseRunOptions={Object {}}
    createCourseRun={[Function]}
    fetchCourseInfo={[Function]}
    fetchCourseRunOptions={[Function]}
    formValues={Object {}}
    id="00000000-0000-0000-0000-000000000001"
    initialValues={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          Create Course Run
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <div>
            <ReduxForm
              currentFormValues={Object {}}
              getCourseRunOptions={[Function]}
              isCreating={true}
              onSubmit={[Function]}
              parseOptions={[Function]}
              title=""
              uuid=""
            />
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Create Course Run",
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": "Create Course Run",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            <div>
              <ReduxForm
                currentFormValues={Object {}}
                getCourseRunOptions={[Function]}
                isCreating={true}
                onSubmit={[Function]}
                parseOptions={[Function]}
                title=""
                uuid=""
              />
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ReduxForm
                  currentFormValues={Object {}}
                  getCourseRunOptions={[Function]}
                  isCreating={true}
                  onSubmit={[Function]}
                  parseOptions={[Function]}
                  title=""
                  uuid=""
                />,
                false,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "currentFormValues": Object {},
                  "getCourseRunOptions": [Function],
                  "isCreating": true,
                  "onSubmit": [Function],
                  "parseOptions": [Function],
                  "title": "",
                  "uuid": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              false,
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            Create Course Run
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <div>
              <ReduxForm
                currentFormValues={Object {}}
                getCourseRunOptions={[Function]}
                isCreating={true}
                onSubmit={[Function]}
                parseOptions={[Function]}
                title=""
                uuid=""
              />
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Create Course Run",
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": "Create Course Run",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
              <div>
                <ReduxForm
                  currentFormValues={Object {}}
                  getCourseRunOptions={[Function]}
                  isCreating={true}
                  onSubmit={[Function]}
                  parseOptions={[Function]}
                  title=""
                  uuid=""
                />
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <ReduxForm
                    currentFormValues={Object {}}
                    getCourseRunOptions={[Function]}
                    isCreating={true}
                    onSubmit={[Function]}
                    parseOptions={[Function]}
                    title=""
                    uuid=""
                  />,
                  false,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "currentFormValues": Object {},
                    "getCourseRunOptions": [Function],
                    "isCreating": true,
                    "onSubmit": [Function],
                    "parseOptions": [Function],
                    "title": "",
                    "uuid": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                false,
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`CreateCourseRunPage renders html correctly when error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CreateCourseRunPage
    clearCourseInfoErrors={[Function]}
    courseInfo={
      Object {
        "data": Object {},
        "error": Array [
          "failed",
        ],
        "isCreating": false,
        "isFetching": false,
      }
    }
    courseRunOptions={Object {}}
    createCourseRun={[Function]}
    fetchCourseInfo={[Function]}
    fetchCourseRunOptions={[Function]}
    formValues={Object {}}
    id="00000000-0000-0000-0000-000000000001"
    initialValues={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          Create Course Run
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <div>
            <ReduxForm
              currentFormValues={Object {}}
              getCourseRunOptions={[Function]}
              isCreating={false}
              onSubmit={[Function]}
              parseOptions={[Function]}
              title=""
              uuid=""
            />
            <StatusAlert
              alertType="danger"
              className=""
              dismissible={false}
              iconClassNames={Array []}
              id="create-error"
              message={
                Array [
                  "failed",
                  <br />,
                ]
              }
              onClose={[Function]}
              title={null}
            />
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Create Course Run",
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": "Create Course Run",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            <div>
              <ReduxForm
                currentFormValues={Object {}}
                getCourseRunOptions={[Function]}
                isCreating={false}
                onSubmit={[Function]}
                parseOptions={[Function]}
                title=""
                uuid=""
              />
              <StatusAlert
                alertType="danger"
                className=""
                dismissible={false}
                iconClassNames={Array []}
                id="create-error"
                message={
                  Array [
                    "failed",
                    <br />,
                  ]
                }
                onClose={[Function]}
                title={null}
              />
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ReduxForm
                  currentFormValues={Object {}}
                  getCourseRunOptions={[Function]}
                  isCreating={false}
                  onSubmit={[Function]}
                  parseOptions={[Function]}
                  title=""
                  uuid=""
                />,
                <StatusAlert
                  alertType="danger"
                  className=""
                  dismissible={false}
                  iconClassNames={Array []}
                  id="create-error"
                  message={
                    Array [
                      "failed",
                      <br />,
                    ]
                  }
                  onClose={[Function]}
                  title={null}
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "currentFormValues": Object {},
                  "getCourseRunOptions": [Function],
                  "isCreating": false,
                  "onSubmit": [Function],
                  "parseOptions": [Function],
                  "title": "",
                  "uuid": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alertType": "danger",
                  "className": "",
                  "dismissible": false,
                  "iconClassNames": Array [],
                  "id": "create-error",
                  "message": Array [
                    "failed",
                    <br />,
                  ],
                  "onClose": [Function],
                  "title": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            Create Course Run
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <div>
              <ReduxForm
                currentFormValues={Object {}}
                getCourseRunOptions={[Function]}
                isCreating={false}
                onSubmit={[Function]}
                parseOptions={[Function]}
                title=""
                uuid=""
              />
              <StatusAlert
                alertType="danger"
                className=""
                dismissible={false}
                iconClassNames={Array []}
                id="create-error"
                message={
                  Array [
                    "failed",
                    <br />,
                  ]
                }
                onClose={[Function]}
                title={null}
              />
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Create Course Run",
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": "Create Course Run",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
              <div>
                <ReduxForm
                  currentFormValues={Object {}}
                  getCourseRunOptions={[Function]}
                  isCreating={false}
                  onSubmit={[Function]}
                  parseOptions={[Function]}
                  title=""
                  uuid=""
                />
                <StatusAlert
                  alertType="danger"
                  className=""
                  dismissible={false}
                  iconClassNames={Array []}
                  id="create-error"
                  message={
                    Array [
                      "failed",
                      <br />,
                    ]
                  }
                  onClose={[Function]}
                  title={null}
                />
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <ReduxForm
                    currentFormValues={Object {}}
                    getCourseRunOptions={[Function]}
                    isCreating={false}
                    onSubmit={[Function]}
                    parseOptions={[Function]}
                    title=""
                    uuid=""
                  />,
                  <StatusAlert
                    alertType="danger"
                    className=""
                    dismissible={false}
                    iconClassNames={Array []}
                    id="create-error"
                    message={
                      Array [
                        "failed",
                        <br />,
                      ]
                    }
                    onClose={[Function]}
                    title={null}
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "currentFormValues": Object {},
                    "getCourseRunOptions": [Function],
                    "isCreating": false,
                    "onSubmit": [Function],
                    "parseOptions": [Function],
                    "title": "",
                    "uuid": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "alertType": "danger",
                    "className": "",
                    "dismissible": false,
                    "iconClassNames": Array [],
                    "id": "create-error",
                    "message": Array [
                      "failed",
                      <br />,
                    ],
                    "onClose": [Function],
                    "title": null,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`CreateCourseRunPage renders html correctly when fetching 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CreateCourseRunPage
    clearCourseInfoErrors={[Function]}
    courseInfo={
      Object {
        "data": Object {},
        "error": null,
        "isCreating": false,
        "isFetching": true,
      }
    }
    courseRunOptions={Object {}}
    createCourseRun={[Function]}
    fetchCourseInfo={[Function]}
    fetchCourseRunOptions={[Function]}
    formValues={Object {}}
    id="00000000-0000-0000-0000-000000000001"
    initialValues={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          Create Course Run
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <LoadingSpinner
            message="Loading…"
          />
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Create Course Run",
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": "Create Course Run",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <LoadingSpinner
              message="Loading…"
            />,
            undefined,
            false,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "message": "Loading…",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          undefined,
          false,
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            Create Course Run
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <LoadingSpinner
              message="Loading…"
            />
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Create Course Run",
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": "Create Course Run",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <LoadingSpinner
                message="Loading…"
              />,
              undefined,
              false,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "message": "Loading…",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            undefined,
            false,
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
